# continuator

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
core/: max_entropy3.py
core/ctor/: Text_continuator.py  belief_propag_stringham_clean.py  continuator_4.py  continuator_v3.py  gradio_midi_listener.py  keith_generation.py  phrase_listener.py  variable_order_markov.py
core/essais/: parquet_chords.py
core/old/: continuator_v3.py  max_entropy2.py  max_entropy3.py  max_entropy4.py
core/utils/: chord_names.py  generate_all_chords.py
ctor/: belief_propag.py  continuator.py  continuator_gradio.py  dynaprog.py  gradio_midi_listener.py  midi_ports_poll.py  phrase_listener.py  pitch_profiles.py  text_continuator.py  variable_order_markov.py
data/: NEWMetrogenerated_melody.mid  after_smoothing.mid  before_smotthing.mid  ctor2_output.mid  first_order_prelude.mid  maxent'-generated_melody.mid  maxent-generated_melody.mid  partita_old_sampling.mid  partita_paper_sampling.mid  prelude_c_incipit.mid  prelude_c_linear.mid  prelude_linear_beginnig.mid  proust_du_cote.txt  skip_markov_25_bip.mamd  skip_markov_generated_1.mid  skip_markov_preludemid.mid  suno_transcribed.mid  temp_NEWMetrogenerated_melody.mid  third_order_prelude.mid  zero_order_prelude.mid
data/jason examples/: martino.p
data/take6/: 44 Spread love.mid  46 Gold Mine.mid  (+9 more)
examples/: char_continuator.py  chordseq_continuator.py  int_continuator.py  note_continuator.py  word_continuator.py
maxent_np/: __init__.py  max_ent_np.py  max_entropy4.py  maxent_abstract.py
midi/: midi_io.py  midi_max_ent.py
midi_stuff/: chorder.py  mini_muse.py
utils/: profiler.py
(+8 files in other folders)
