[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuator"
version = "0.1.0"
description = "A project implementing a constrainable continuator."
authors = [
    { name = "François Pachet", email = "pachet@ynosound.com" },
]
requires-python=">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy ~= 2.2",
    "mido ~= 1.3",
    "python-rtmidi",
    "gradio",
    "matplotlib",
]
[tool.hatch.build.targets.sdist]
include = [
    "/ctor",
    "/data",
]
[tool.hatch.build.targets.wheel]
packages = ["ctor"]
